update.log
  File "/Users/zhangjingwei/.qclaw/workspace/hotspot-tracker/auto_update.py", line 122
    {"title": "春季赏花目的地TOP10", "platform": "小红书", "heat": "3.2亿",
    ^
SyntaxError: '{' was never closed
[2026-03-29 08:00] 共更新 60 条热点数据
